# screenforge

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  screenforge.yaml
.claude/skills/verify/: skill.md
assets/frames/: README.md
examples/input/: demo.ppm
scripts/: diagnose.sh  session-start.sh  setup.sh
src/: background.rs  capture.rs  cli.rs  color.rs  compose.rs  config.rs  devices.rs  frames.rs  main.rs  palette.rs  pipeline.rs  preview.rs  simulator.rs  snap.rs
